# salescompass

./: .env.example  .gitignore  .replit  IMPROVEMENTS_ROADMAP.md  README.md  pyproject.toml  replit.md  test_ml_import.py
.github/workflows/: ml_ci.yml
attached_assets/: Pasted--Config-files-Preview-your-app-here-The-app-is-currentl_1764848344642.txt
core/: .dockerignore  .env.example  CASES_MODULE_MASTER_CHECKLIST.md  COMMISSIONS_MODULE_MASTER_CHECKLIST.md  CONTRIBUTING.md  DASHBOARD_BUILDER_TROUBLESHOOTING.md  DEVELOPER_ONBOARDING.md  Dockerfile  ENGAGEMENT_MODULE_MASTER_CHECKLIST.md  NAVIGATION_AUDIT_REPORT.md  PRODUCTS_MODULE_MASTER_CHECKLIST.md  PROPOSALS_MODULE_MASTER_CHECKLIST.md  SALES_MODULE_MASTER_CHECKLIST.md  audit_features.py  audit_modules.py  clean_up.py  commands.txt  db.sqlite3  debug_apps.py  docker-compose.yml  manage.py  navigation_audit_script.py  pytest.ini  requirements.txt  setup_dashboard_test.py  setup_simulation.py  test_leads_engagement.py  update_checklists.py  verify_accounts_upgrade.py  verify_business_rules.py  verify_celery.py  verify_commissions.py  verify_commissions_v2.py  verify_dashboard_cp.py  verify_dashboard_logic.py  verify_policies.py  verify_pos_foundation.py  verify_products.py  verify_revenue_forecast.py  verify_sales_analytics.py
core/access_control/: admin.py  apps.py  context_processors.py  controller.py  forms.py  middleware.py  models.py  role_models.py  urls.py  utils.py  views.py
ml_models/: README.md  __init__.py  apps.py  main.py  requirements.txt
scripts/: debug_sale_model.py  verify_reverse_match.py
(+2008 files in other folders)
